// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack renders with \`default\` spacing 1`] = `
@supports (grid-gap:0) {
  .emotion-0 {
    display: grid;
    grid-gap: 1rem;
  }
}

@supports not (grid-gap:0) {
  .emotion-0 > * + * {
    margin-top: 1rem;
  }

  .emotion-0 > style:first-child + * {
    margin-top: 0;
  }
}

<div
  className="emotion-0"
>
  <h1>
    Lorem Ipsum Dolor Sit Amet.
  </h1>
  <p>
    Consectetur adipiscing elit. Nullam gravida ex tempor, ornare sapien a, sodales velit. Curabitur ac ultrices massa, eu scelerisque mauris.
  </p>
  <p>
    Donec maximus purus at tempor elementum. Donec commodo aliquam metus, et vestibulum felis venenatis pellentesque.
  </p>
  <p>
    Phasellus felis sem, convallis eget pretium vel, faucibus sit amet nulla. Fusce auctor nibh non libero sagittis, semper sagittis ipsum euismod.
  </p>
  <div>
    <p>
      Donec maximus purus at tempor elementum. Donec commodo aliquam metus, et vestibulum felis venenatis pellentesque.
    </p>
    <p>
      Phasellus felis sem, convallis eget pretium vel, faucibus sit amet nulla. Fusce auctor nibh non libero sagittis, semper sagittis ipsum euismod.
    </p>
  </div>
</div>
`;

exports[`Stack renders with adjusted spacing 1`] = `
@supports (grid-gap:0) {
  .emotion-0 {
    display: grid;
    grid-gap: 0.5rem;
  }
}

@supports not (grid-gap:0) {
  .emotion-0 > * + * {
    margin-top: 0.5rem;
  }

  .emotion-0 > style:first-child + * {
    margin-top: 0;
  }
}

<div
  className="emotion-0"
>
  <h1>
    Lorem Ipsum Dolor Sit Amet.
  </h1>
  <p>
    Consectetur adipiscing elit. Nullam gravida ex tempor, ornare sapien a, sodales velit. Curabitur ac ultrices massa, eu scelerisque mauris.
  </p>
  <p>
    Donec maximus purus at tempor elementum. Donec commodo aliquam metus, et vestibulum felis venenatis pellentesque.
  </p>
  <p>
    Phasellus felis sem, convallis eget pretium vel, faucibus sit amet nulla. Fusce auctor nibh non libero sagittis, semper sagittis ipsum euismod.
  </p>
  <div>
    <p>
      Donec maximus purus at tempor elementum. Donec commodo aliquam metus, et vestibulum felis venenatis pellentesque.
    </p>
    <p>
      Phasellus felis sem, convallis eget pretium vel, faucibus sit amet nulla. Fusce auctor nibh non libero sagittis, semper sagittis ipsum euismod.
    </p>
  </div>
</div>
`;
